🔖 prepare release v1.0.1
And some formatting and deprecations